minor spacing fix

--- a/amyintech/src/App.css
+++ b/amyintech/src/App.css
@@ -64,8 +64,9 @@
 
 /* Home Job Section */
 .home-job-screen {
-  background-color: black; /* ✅ solid black background */
+  background-color: black;
   width: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -73,6 +74,7 @@
   color: white;
   z-index: 2;
 }
+
 .company-logo {
   max-width: 300px;
   width: 80%;
